New OpenAPI GET for yaml/json in API
