# swagger/api_openapi.go
@@ -16,25 +16,39 @@ import (
 	"os"
 )
 
-/* Openapi - here we can retrieve the openapi3.0 aka "swagger file" for auto-provision*/
-func Openapi(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+func Openapi_yaml(w http.ResponseWriter, r *http.Request)
+{
+	Openapi_option(w http.ResponseWriter, r *http.Request, true)
+}
 
-	file, err := os.Open("/openapi.json")
+func Openapi_json(w http.ResponseWriter, r *http.Request)
+{
+	Openapi_option(w http.ResponseWriter, r *http.Request, false)
+}
+
+/* Openapi - here we can retrieve the openapi3.0 aka "swagger file" for auto-provision*/
+func Openapi_option(w http.ResponseWriter, r *http.Request, yaml bool=true) {
+	if yaml==true 
+		w.Header().Set("Content-Type", "application/yaml; charset=UTF-8")
+		file, err := os.Open("/openapi.yaml")
+	else
+		w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+		file, err := os.Open("/openapi.json")
 	defer file.Close()
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		fmt.Fprintf(w, "Could not find JSON file")
+		fmt.Fprintf(w, "Could not find openapi file")
 		return
 	}
 
 	filecontent, err := ioutil.ReadAll(file)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		fmt.Fprintf(w, "Could not read JSON file after loading it")
+		fmt.Fprintf(w, "Could not read openapi file after loading it")
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 	w.Write(filecontent)
 	//fmt.Fprintf(w, string(filecontent))
 }
+
